<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"

        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">


            <TextView
                android:id="@+id/signUpTv"
                style="@style/text_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:padding="24dp"
                android:text="@string/sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView7"
                style="@style/text_heading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/margin_end"
                android:gravity="center"
                android:text="@string/fake_store_application"
                android:textSize="@dimen/text_medium_heading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUpTv" />


            <TextView
                android:id="@+id/textView"
                style="@style/text_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/margin_end"
                android:gravity="center"
                android:text="@string/text_sign_up_now_and_get_your_first_on_demand_delivery_today"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TilEmail"
                style="@style/text_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_start"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_et"
                    android:hint="@string/hint_email_address"
                    android:textCursorDrawable="@drawable/shape_cursor"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TilPassword"
                style="@style/text_input_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilEmail"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_et"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.example.ecommerceapplication.utils.LoadingButton
                android:id="@+id/btnSignIn"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/spruce_valencia"
                android:text="Sign In"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TilPassword"
                app:lb_buttonColor="@color/colorPrimary"
                app:lb_cornerRadius="@dimen/btn_corner_radius"
                app:lb_isShadowEnable="false" />


            <TextView
                android:id="@+id/TvCantLogin"
                style="@style/text_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_start_small"
                android:layout_marginStart="@dimen/margin_end_small"
                android:padding="@dimen/padding_normal"
                android:layout_marginTop="@dimen/margin_top_small"
                android:text="@string/text_can_t_log_in"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

            <com.example.ecommerceapplication.utils.LoadingButton
                android:id="@+id/btnGuest"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:paddingRight="@dimen/padding"
                android:paddingLeft="@dimen/padding"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/spruce_valencia"
                android:text="@string/continue_as_guest"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.583"
                app:layout_constraintStart_toStartOf="parent"
                app:lb_buttonColor="@color/colorPrimary"
                app:lb_cornerRadius="@dimen/btn_corner_radius"
                app:lb_isShadowEnable="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>
